--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,9 +6,9 @@ resources:
   - ./bazarr/ks.yaml
   - ./hydra/ks.yaml
   #- ./porla/ks.yaml
-  #- ./prowlarr/ks.yaml
+  - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
-  #- ./radarr/ks.yaml
+  - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
-  #- ./sonarr/ks.yaml
+  - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
