--- a/kubernetes/flux/repositories/helm/tooljet.yaml
+++ b/kubernetes/flux/repositories/helm/tooljet.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  url: https://github.com/ToolJet/helm-charts.git
+  url: https://tooljet.github.io/helm-charts
