--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,5 +9,6 @@ resources:
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
+  - ./tooljet.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
