--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,6 +9,6 @@ resources:
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
-  - ./tooljet/ks.yaml
+  #- ./tooljet/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
