--- a/kubernetes/apps/default/tooljet/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tooljet/app/helmrelease.yaml
@@ -38,11 +38,11 @@ spec:
           threshhold:
             cpu: 0.75
             ram: 768Mi
-        secret:
-          name: tooljet-server
-          data:
-            lockbox_key: "0123456789ABCDEF"
-            secret_key_base: "0123456789ABCDEF"
+        # secret:
+        #   name: tooljet-server
+        #   data:
+        #     lockbox_key: "0123456789ABCDEF"
+        #     secret_key_base: "0123456789ABCDEF"
 
     # ingress:
     #   enabled: true
@@ -91,6 +91,8 @@ spec:
       TOOLJET_DB_PASS: ${SECRET_POSTGRES_PASSWORD}
       TOOLJET_DB: "tooljet_db"
       PGRST_HOST: "cloudnative-pg-cluster.database.svc.cluster.local"
+      LOCKBOX_MASTER_KEY: ec78705255d83cb2c60ebe875fa7a1e0f7b37c90ccc753ae21fadddd3965d36d
+      SECRET_KEY_BASE: b322c3518bf650192b80e98afa76d32bedade70583170fc1cb850c38e405f129ce9860b6b096e3167618780d2e166edd167580e090df673ff783b388d90471c2
 
     enterprise:
       enabled: false
