--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -24,6 +24,7 @@ resources:
   - ./kubernetes-dashboard.yaml
   - ./metrics-server.yaml
   - ./prometheus-community.yaml
+  - ./rook-ceph.yaml
   - ./runix.yaml
   - ./stakater.yaml
   - ./superset.yaml
