--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -27,9 +27,9 @@ spec:
       retries: 3
   uninstall:
     keepHistory: false
-  # dependsOn:
-  #   - name: local-path-provisioner
-  #     namespace: kube-system
+  dependsOn:
+    - name: local-path-provisioner
+      namespace: kube-system
   values:
     crds:
       enabled: true
