--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./actions-runner-controller-charts.yaml
   - ./appsmith.yaml
   - ./authelia.yaml
+  - ./backube.yaml
   - ./baserow.yaml
   - ./budibase.yaml
   - ./bitnami.yaml
