--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -49,6 +49,22 @@ spec:
       #   - secretRef:
       #     name: authelia-secrets
       env:
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_ADDITIONAL_GROUPS_DN: ou=groups
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_ADDITIONAL_USERS_DN: ou=people
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: dc=home,dc=arpa
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_DISPLAY_NAME_ATTRIBUTE: displayName
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUPS_FILTER: (member={dn})
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUP_NAME_ATTRIBUTE: cn
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_IMPLEMENTATION: custom
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_MAIL_ATTRIBUTE: mail
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_START_TLS: "false"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TIMEOUT: 5s
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_URL: ldap://lldap.default.svc.cluster.local:389
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: uid=admin,ou=people,dc=home,dc=arpa
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERNAME_ATTRIBUTE: uid
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERS_FILTER: (&({username_attribute}={input})(objectClass=person))
+        AUTHELIA_AUTHENTICATION_BACKEND_PASSWORD_RESET_DISABLE: "true"
+        AUTHELIA_AUTHENTICATION_BACKEND_REFRESH_INTERVAL: 1m
         AUTHELIA_DEFAULT_REDIRECTION_URL: "https://auth.${SECRET_DOMAIN}"
         AUTHELIA_DUO_API_DISABLE: "true"
         AUTHELIA_LOG_LEVEL: trace
