--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -26,7 +26,7 @@ identity_providers:
     clients:
       - id: grafana
         description: Grafana
-        secret: "${GRAFANA_OAUTH_CLIENT_SECRET}"
+        secret: CEE177DB2D1EC6353B1110D1B84CD9FE08FCAE1BCC4C00E7C635E24B937FF213
         public: false
         authorization_policy: two_factor
         pre_configured_consent_duration: 1y
