--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -1,10 +1,13 @@
 ---
 session:
-  expiration: 1h
-  inactivity: 15m
-  remember_me_duration: 1M
   redis:
-    enabled: false
+    host: redis-master.database.svc.cluster.local
+    port: 6379
+    password: ${SECRET_POSTGRES_PASSWORD}
+    database_index: 15
+    maximum_active_connections: 8
+    minimum_idle_connections: 0
+
 
 access_control:
   #default_policy: two_factor
