--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -8,6 +8,13 @@ session:
     maximum_active_connections: 8
     minimum_idle_connections: 0
 
+notifier:
+  disable_startup_check: true
+  filesystem:
+    enabled: true
+    filename: /config/notification.txt
+  smtp:
+    enabled: false
 
 access_control:
   #default_policy: two_factor
