redis remove auth

--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -19,9 +19,9 @@ spec:
   values:
     architecture: standalone
     auth:
-      enabled: true
+      enabled: false
       sentinal: true
-      password: "${SECRET_REDIS_PASSWORD}"
+      #password: "${SECRET_REDIS_PASSWORD}"
     master:
       persistence:
         size: 5Gi
