--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -3,7 +3,7 @@ session:
   redis:
     host: redis-master.database.svc.cluster.local
     port: 6379
-    password: ${SECRET_POSTGRES_PASSWORD}
+    password: ${SECRET_REDIS_PASSWORD}
     database_index: 15
     maximum_active_connections: 8
     minimum_idle_connections: 0
