baserow redis remove auth

--- a/kubernetes/apps/default/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/default/authelia/app/helmrelease.yaml
@@ -64,8 +64,8 @@ spec:
       AUTHELIA_DEFAULT_REDIRECTION_URL: https://auth.${SECRET_DOMAIN}
       AUTHELIA_DUO_API_DISABLE: "true"
       AUTHELIA_LOG_LEVEL: info
-      # AUTHELIA_NOTIFIER_DISABLE_STARTUP_CHECK: "true"
-      # AUTHELIA_NOTIFIER_SMTP_DISABLE_REQUIRE_TLS: "true"
+      AUTHELIA_NOTIFIER_DISABLE_STARTUP_CHECK: "true"
+      AUTHELIA_NOTIFIER_SMTP_DISABLE_REQUIRE_TLS: "true"
       # AUTHELIA_NOTIFIER_SMTP_HOST: ""
       # AUTHELIA_NOTIFIER_SMTP_PORT: 25
       # AUTHELIA_NOTIFIER_SMTP_SENDER: Authelia <authelia@example.com>
@@ -73,8 +73,8 @@ spec:
       AUTHELIA_SERVER_PORT: &port 80
       AUTHELIA_SESSION_DOMAIN: ${SECRET_DOMAIN}
       AUTHELIA_SESSION_NAME: authelia-home-cluster
-      # AUTHELIA_SESSION_REDIS_DATABASE_INDEX: 14
-      # AUTHELIA_SESSION_REDIS_HOST: redis.database.svc.cluster.local
+      AUTHELIA_SESSION_REDIS_DATABASE_INDEX: 14
+      AUTHELIA_SESSION_REDIS_HOST: redis-master.database.svc.cluster.local
       AUTHELIA_TELEMETRY_METRICS_ADDRESS: tcp://0.0.0.0:8080
       AUTHELIA_TELEMETRY_METRICS_ENABLED: "true"
       AUTHELIA_THEME: dark
