--- a/kubernetes/apps/default/baserow/app/helmrelease.yaml
+++ b/kubernetes/apps/default/baserow/app/helmrelease.yaml
@@ -664,7 +664,7 @@ spec:
         # -- Name of existing secret to use for Redis™ credentials
         #existingSecret: baserow-secret
         # -- Password to use
-        password: ${SECRET_POSTGRES_PASSWORD}
+        #password: ${SECRET_POSTGRES_PASSWORD}
         # -- Key in the secret containing the password
     #    userPasswordKey: ""
       # -- Hostname of Redis™
