hajimari add database

--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -39,6 +39,7 @@ spec:
       namespaceSelector:
         matchNames:
           - default
+          - database
           - monitoring
           - networking
           - media
