--- a/kubernetes/apps/default/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/default/authelia/app/helmrelease.yaml
@@ -66,9 +66,9 @@ spec:
       AUTHELIA_LOG_LEVEL: info
       AUTHELIA_NOTIFIER_DISABLE_STARTUP_CHECK: "true"
       AUTHELIA_NOTIFIER_SMTP_DISABLE_REQUIRE_TLS: "true"
-      # AUTHELIA_NOTIFIER_SMTP_HOST: ""
-      # AUTHELIA_NOTIFIER_SMTP_PORT: 25
-      # AUTHELIA_NOTIFIER_SMTP_SENDER: Authelia <authelia@example.com>
+      AUTHELIA_NOTIFIER_SMTP_HOST: ""
+      AUTHELIA_NOTIFIER_SMTP_PORT: 25
+      AUTHELIA_NOTIFIER_SMTP_SENDER: Authelia <authelia@${SECRET_DOMAIN}>
       AUTHELIA_SERVER_DISABLE_HEALTHCHECK: "true"
       AUTHELIA_SERVER_PORT: &port 80
       AUTHELIA_SESSION_DOMAIN: ${SECRET_DOMAIN}
