--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -10,6 +10,10 @@ stringData:
     SECRET_DOMAIN2: ENC[AES256_GCM,data:lXMyBiRmRaxB5X0=,iv:qKl1Fukhy4k8tnRbhKd2ABpmcwFJcYNGIPnPiIMSRyM=,tag:3Hkk0IT+JiaZtBhuKdwUNQ==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:YobnYGq28VBmv/81VkftjRe1KtGS3sB/JYkBZDSPb92t12jLh6+jPQ==,iv:BniFQjcWbaXt6HfXTyBXI/spzAao2oKPpoQhmswu5ms=,tag:ifbBnh5+zShujoTHGf6bNQ==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
+    SECRET_GMAIL_USERNAME: ENC[AES256_GCM,data:PayfRYAqxq2bRazxXICtb2K1jwk=,iv:Y/B+d9CE1W/EP0OVxa6c40udsWOIJDh1PvcedkFd8DQ=,tag:i/84p649oAWjIyd5pgLZWA==,type:str]
+    SECRET_GMAIL_PASSWORD: ENC[AES256_GCM,data:E1Csl2aWGE4=,iv:Q9Wg3P5B9uf7NWsElS/M8D1/W5E3wIw1wPPPGoCn5+w=,tag:S0ctODapTf16tBneUXHGkQ==,type:str]
+    SECRET_GMAIL_HOST: ENC[AES256_GCM,data:DzpdT2VRAojKoMEoGwA=,iv:QAipBd+q/VgYvbuR+Tuzfa8HA68h9r0vu4bTlIxZ08A=,tag:8oMCKneAIKpDutxEPDxIoQ==,type:str]
+    SECRET_GMAIL_PORT: ENC[AES256_GCM,data:UvOO,iv:Tc4lQosE9xJ0HAtnprqVxTG2T1eLoXMaNgGA91lwKlU=,tag:3NPwjFvAtVxXmypSVaEoyw==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +29,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-01T16:32:53Z"
-    mac: ENC[AES256_GCM,data:Sxt8yg5PFShq0YVqr5Vwy8yY0MuBteQPIaX/LQQ45jX3JGsD8KB0rGcE34DDu3CqRpQVKT4aDubtqC+N4EvMVatiN7M0ldxXhjbVuvxCnQPGNYDso/nOvaRuf5Hg408qqcmFtwXbdBmQtC3VsICnNfoFEzC9xXxoGIwWU/NBBlY=,iv:N9brL/dwJx1XDT8Dxa7jiJp8KUO1Afb6ORCSaYooWO0=,tag:eurGok6UA3XdgqKG0YeM2w==,type:str]
+    lastmodified: "2023-10-23T18:30:24Z"
+    mac: ENC[AES256_GCM,data:8QsskcwcRpz9sJQa+A9dIpynO+dfj9QcbWvXzBLA1Kzefx7cOhAGQ8F6twZ/kMXnZ3PMhhZP7bf7TOTrFC0J3QflZG/HueayKiS8MwYi4o02IymO9o0KWEkRuSljg0N1bRtUm1SN45nlqvzV7Zc0enHivmFFVWRBD53Qg/I+S6w=,iv:BAG70scPcV3j4EweOy+QVcfg3LasqURNMj0pVmgMge0=,tag:OE4fClixvEMx6bspEUckyg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
