--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -13,7 +13,7 @@ stringData:
     SECRET_GMAIL_USERNAME: ENC[AES256_GCM,data:PayfRYAqxq2bRazxXICtb2K1jwk=,iv:Y/B+d9CE1W/EP0OVxa6c40udsWOIJDh1PvcedkFd8DQ=,tag:i/84p649oAWjIyd5pgLZWA==,type:str]
     SECRET_GMAIL_PASSWORD: ENC[AES256_GCM,data:E1Csl2aWGE4=,iv:Q9Wg3P5B9uf7NWsElS/M8D1/W5E3wIw1wPPPGoCn5+w=,tag:S0ctODapTf16tBneUXHGkQ==,type:str]
     SECRET_GMAIL_HOST: ENC[AES256_GCM,data:DzpdT2VRAojKoMEoGwA=,iv:QAipBd+q/VgYvbuR+Tuzfa8HA68h9r0vu4bTlIxZ08A=,tag:8oMCKneAIKpDutxEPDxIoQ==,type:str]
-    SECRET_GMAIL_PORT: ENC[AES256_GCM,data:UvOO,iv:Tc4lQosE9xJ0HAtnprqVxTG2T1eLoXMaNgGA91lwKlU=,tag:3NPwjFvAtVxXmypSVaEoyw==,type:int]
+    SECRET_GMAIL_PORT: ENC[AES256_GCM,data:0nSb,iv:0836meh5t2LhOPXjiAfd82dl0sxWWvATq/CI0oMs7/8=,tag:UNwW+hPhlQNuq9wWaIbSMw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +29,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-23T18:30:24Z"
-    mac: ENC[AES256_GCM,data:8QsskcwcRpz9sJQa+A9dIpynO+dfj9QcbWvXzBLA1Kzefx7cOhAGQ8F6twZ/kMXnZ3PMhhZP7bf7TOTrFC0J3QflZG/HueayKiS8MwYi4o02IymO9o0KWEkRuSljg0N1bRtUm1SN45nlqvzV7Zc0enHivmFFVWRBD53Qg/I+S6w=,iv:BAG70scPcV3j4EweOy+QVcfg3LasqURNMj0pVmgMge0=,tag:OE4fClixvEMx6bspEUckyg==,type:str]
+    lastmodified: "2023-10-23T18:33:04Z"
+    mac: ENC[AES256_GCM,data:Msmc3QeOWY4xB/JOqgUMunabQMP/pKU9vJJ72LF8kecsz9gHLwqVs6XkWT+mnMP6HmN8Xqyu/JmpPH5eRKsFzv22g0c2RhY6+on3SCTiUnGXwKt3GeoFBy0g1GhY/UXCzYVcQSHFw9oEs3h4Szw4Di7xkwcxVRjhvVQL67BYxvo=,iv:HB81yPGyZ0mVu1tWoYrW0QlgcJMC2BByGZ1GaeTEEhM=,tag:Rt9gBWhr3cPnR2qwgA7HOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
