--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -10,10 +10,10 @@ stringData:
     SECRET_DOMAIN2: ENC[AES256_GCM,data:lXMyBiRmRaxB5X0=,iv:qKl1Fukhy4k8tnRbhKd2ABpmcwFJcYNGIPnPiIMSRyM=,tag:3Hkk0IT+JiaZtBhuKdwUNQ==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:YobnYGq28VBmv/81VkftjRe1KtGS3sB/JYkBZDSPb92t12jLh6+jPQ==,iv:BniFQjcWbaXt6HfXTyBXI/spzAao2oKPpoQhmswu5ms=,tag:ifbBnh5+zShujoTHGf6bNQ==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
-    SECRET_GMAIL_USERNAME: ENC[AES256_GCM,data:PayfRYAqxq2bRazxXICtb2K1jwk=,iv:Y/B+d9CE1W/EP0OVxa6c40udsWOIJDh1PvcedkFd8DQ=,tag:i/84p649oAWjIyd5pgLZWA==,type:str]
-    SECRET_GMAIL_PASSWORD: ENC[AES256_GCM,data:E1Csl2aWGE4=,iv:Q9Wg3P5B9uf7NWsElS/M8D1/W5E3wIw1wPPPGoCn5+w=,tag:S0ctODapTf16tBneUXHGkQ==,type:str]
-    SECRET_GMAIL_HOST: ENC[AES256_GCM,data:DzpdT2VRAojKoMEoGwA=,iv:QAipBd+q/VgYvbuR+Tuzfa8HA68h9r0vu4bTlIxZ08A=,tag:8oMCKneAIKpDutxEPDxIoQ==,type:str]
-    SECRET_GMAIL_PORT: ENC[AES256_GCM,data:0nSb,iv:0836meh5t2LhOPXjiAfd82dl0sxWWvATq/CI0oMs7/8=,tag:UNwW+hPhlQNuq9wWaIbSMw==,type:str]
+    SECRET_MAIL_USERNAME: ENC[AES256_GCM,data:XSLpQqqe3erCjq6+0nd1Pr/5KBUxA0YrcxxJd9zZdec=,iv:TFw0wlwQixz833vjKAIOB9TxridMzyEL2uO2067fsGY=,tag:1TWR7vYybbkbaSxEQmSExQ==,type:str]
+    SECRET_MAIL_PASSWORD: ENC[AES256_GCM,data:P7SsXrTW8anidGXfAe2EI7DD6QCKND1//RYZjcgCqiA=,iv:rAVmouPXjALSb1Rtnpb0jQuUSxUXDPclkAXqlisnTbg=,tag:sRAvoYnfcscODB2gcRMG5Q==,type:str]
+    SECRET_MAIL_HOST: ENC[AES256_GCM,data:ynJwMCwXLQ6ScnNJ22SwYKI=,iv:sSVGVHHOoHhCvBhZORzevjom48OJhS3F3guJCPahp8w=,tag:dcv35A2hBkwvI1yV+maciw==,type:str]
+    SECRET_MAIL_PORT: ENC[AES256_GCM,data:fFtj,iv:bZpLnHbHGNgDV9dxxb6p5lCnUYv9AA/TZgWr/XgOIHM=,tag:cADCsZUsoFRBAQQgzmnxFQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +29,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-23T18:33:04Z"
-    mac: ENC[AES256_GCM,data:Msmc3QeOWY4xB/JOqgUMunabQMP/pKU9vJJ72LF8kecsz9gHLwqVs6XkWT+mnMP6HmN8Xqyu/JmpPH5eRKsFzv22g0c2RhY6+on3SCTiUnGXwKt3GeoFBy0g1GhY/UXCzYVcQSHFw9oEs3h4Szw4Di7xkwcxVRjhvVQL67BYxvo=,iv:HB81yPGyZ0mVu1tWoYrW0QlgcJMC2BByGZ1GaeTEEhM=,tag:Rt9gBWhr3cPnR2qwgA7HOQ==,type:str]
+    lastmodified: "2023-10-23T21:58:17Z"
+    mac: ENC[AES256_GCM,data:GG+LkV9pgE7gZ9jhVmlEthQKk0b11Ae/BGlNNs/r8Gvx46xjK5b4iiZ3+NIuAkul6MFd4IgNor10URXP0g4wu0EWDdotPHRaBmzzu/0NcpObdGpudaaTpc/345T2+EGw3wm84p/oI5h7eOedMNExGbhfVE1f/xBjgytOewju99M=,iv:am7AY28RjPPJOjHedYlSvByb2QBhr8m3Z6nJ8UVA/eQ=,tag:e+cNENJczkLk9bkq750CkQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
