--- a/kubernetes/apps/default/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/default/lldap/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
       LLDAP_HTTP_PORT: &port 80
       LLDAP_HTTP_URL: https://lldap.${SECRET_DOMAIN}
       LLDAP_LDAP_PORT: &ldapPort 389
-      LLDAP_LDAP_BASE_DN: dc=${SECRET_DOMAIN},dc=com,dc=arpa
+      LLDAP_LDAP_BASE_DN: dc=home,dc=arpa
     envFrom: *envFrom
     service:
       main:
