--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -10,6 +10,7 @@ stringData:
     SECRET_DOMAIN2: ENC[AES256_GCM,data:lXMyBiRmRaxB5X0=,iv:qKl1Fukhy4k8tnRbhKd2ABpmcwFJcYNGIPnPiIMSRyM=,tag:3Hkk0IT+JiaZtBhuKdwUNQ==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:YobnYGq28VBmv/81VkftjRe1KtGS3sB/JYkBZDSPb92t12jLh6+jPQ==,iv:BniFQjcWbaXt6HfXTyBXI/spzAao2oKPpoQhmswu5ms=,tag:ifbBnh5+zShujoTHGf6bNQ==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
+    SECRET_GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:pmmt8CJM5j9lCRXB/6xTu3utfGJesT8LzF6LwiBlqABijadUE13otqq9AaiM8cPrq02uqv5WovZ/W/KH1xgU9A==,iv:6OkeJ4dWGJnD+oA4QUsYVbgk/RYr/Lig74vb0c4TOL8=,tag:oNX0Z4W4S/EOePotWqa3MA==,type:str]
     SECRET_MAIL_USERNAME: ENC[AES256_GCM,data:XSLpQqqe3erCjq6+0nd1Pr/5KBUxA0YrcxxJd9zZdec=,iv:TFw0wlwQixz833vjKAIOB9TxridMzyEL2uO2067fsGY=,tag:1TWR7vYybbkbaSxEQmSExQ==,type:str]
     SECRET_MAIL_PASSWORD: ENC[AES256_GCM,data:P7SsXrTW8anidGXfAe2EI7DD6QCKND1//RYZjcgCqiA=,iv:rAVmouPXjALSb1Rtnpb0jQuUSxUXDPclkAXqlisnTbg=,tag:sRAvoYnfcscODB2gcRMG5Q==,type:str]
     SECRET_MAIL_HOST: ENC[AES256_GCM,data:ynJwMCwXLQ6ScnNJ22SwYKI=,iv:sSVGVHHOoHhCvBhZORzevjom48OJhS3F3guJCPahp8w=,tag:dcv35A2hBkwvI1yV+maciw==,type:str]
@@ -29,8 +30,8 @@ sops:
             R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
             sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-23T21:58:17Z"
-    mac: ENC[AES256_GCM,data:GG+LkV9pgE7gZ9jhVmlEthQKk0b11Ae/BGlNNs/r8Gvx46xjK5b4iiZ3+NIuAkul6MFd4IgNor10URXP0g4wu0EWDdotPHRaBmzzu/0NcpObdGpudaaTpc/345T2+EGw3wm84p/oI5h7eOedMNExGbhfVE1f/xBjgytOewju99M=,iv:am7AY28RjPPJOjHedYlSvByb2QBhr8m3Z6nJ8UVA/eQ=,tag:e+cNENJczkLk9bkq750CkQ==,type:str]
+    lastmodified: "2023-10-23T23:26:39Z"
+    mac: ENC[AES256_GCM,data:Y+wl/aj2nhZTNZ7RU5LyqYsWCxenGOiekwUzwpyr16J9yA8scv7zSZhANYnf7UioTF/NVK30NuQ+W373O8hqE1HEz25LGPB08v/EBren8g4YxIXC8QzPE0tr+vpZnWK2p3P2p7blURfqkKlDWie0zsPbpOkrkGbwZQyXFue5Nco=,iv:KGPw4DuRyamgJVTZg02UjOnUqZNqCfCOqAXgqx2Si90=,tag:vdIy1ohG6mNBxEXVaUiQGQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
