--- a/kubernetes/apps/default/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/default/authelia/app/config/configuration.yaml
@@ -39,7 +39,7 @@ identity_providers:
     clients:
       - id: grafana
         description: Grafana
-        secret: CEE177DB2D1EC6353B1110D1B84CD9FE08FCAE1BCC4C00E7C635E24B937FF213
+        secret: ${SECRET_GRAFANA_OAUTH_CLIENT_SECRET}
         public: false
         authorization_policy: one_factor
         pre_configured_consent_duration: 1y
