--- a/kubernetes/apps/default/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/default/authelia/app/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
       # AUTHELIA_NOTIFIER_SMTP_DISABLE_REQUIRE_TLS: "true"
       AUTHELIA_NOTIFIER_SMTP_HOST: ${SECRET_MAIL_HOST}
       AUTHELIA_NOTIFIER_SMTP_PORT: ${SECRET_MAIL_PORT}
-      AUTHELIA_NOTIFIER_SMTP_SENDER: auth <auth@${SECRET_DOMAIN}>
+      AUTHELIA_NOTIFIER_SMTP_SENDER: ${SECRET_DOMAIN} auth <auth@${SECRET_DOMAIN}>
       AUTHELIA_SERVER_DISABLE_HEALTHCHECK: "true"
       AUTHELIA_SERVER_PORT: &port 80
       AUTHELIA_SESSION_DOMAIN: ${SECRET_DOMAIN}
