--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./authelia/ks.yaml
   - ./baserow/ks.yaml
   # - ./budibase/ks.yaml
-  - ./hajimari/ks.yaml
+  # - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./lldap/ks.yaml
   - ./n8n/ks.yaml
