--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./influxdb/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki-stack/ks.yaml
+  #- ./loki-stack/ks.yaml
   - ./promlens/ks.yaml
-# - ./vector/ks.yaml
+  - ./loki/ks.yaml
+  - ./promtail/ks.yaml
