--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -23,7 +23,8 @@ spec:
       hosts:
         - host: "loki.${SECRET_DOMAIN}"
           paths:
-            - /
+          - path: /
+            pathType: Prefix
       tls:
         - hosts:
             - "loki.${SECRET_DOMAIN}"
