--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -3,12 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
- # - ./bazarr/ks.yaml
+  - ./bazarr/ks.yaml
   - ./hydra/ks.yaml
   #- ./porla/ks.yaml
-#  - ./prowlarr/ks.yaml
- # - ./qbittorrent/ks.yaml
-  #- ./radarr/ks.yaml
+  - ./prowlarr/ks.yaml
+  - ./qbittorrent/ks.yaml
+  - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
- # - ./sonarr/ks.yaml
+  - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
