--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
               SONARR__INSTANCE_NAME: Sonarr
               SONARR__PORT: &port 80
               SONARR__LOG_LEVEL: info
-              SONARR__THEME: dark
+              #SONARR__THEME: dark
             envFrom: *envFrom
             probes:
               liveness: &probes
