--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -10,5 +10,5 @@ resources:
   - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
- # - ./sonarr/ks.yaml
+  - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
