--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,10 +5,9 @@ resources:
   - ./namespace.yaml
   - ./bazarr/ks.yaml
   - ./hydra/ks.yaml
-  #- ./porla/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
-  - ./radarr/ks.yaml
+  #- ./radarr/ks.yaml
   - ./sabnzbd/ks.yaml
   - ./sonarr/ks.yaml
   - ./youtubedl/ks.yaml
