--- a/kubernetes/apps/media/radarr/app/radarr.sops.yaml
+++ b/kubernetes/apps/media/radarr/app/radarr.sops.yaml
@@ -17,7 +17,7 @@ stringData:
     INIT_POSTGRES_HOST: ENC[AES256_GCM,data:x3IjyCKMrgHHipDgpDxqIg8isPWz4JxIxMwFBscOWPGkIGBin0omfw2WyNj/TP+z9w==,iv:hDS8v0XRxbuyIE6WLJCANzG55z3qDiHMkWhID7d1FEc=,tag:/3XiFWoMfi++B3NgM9/H6Q==,type:str]
     INIT_POSTGRES_USER: ENC[AES256_GCM,data:ipcJBMXpQZQ=,iv:vExYW2b9URG4tjRKIZjGuHi4Hr0rzQZ+4OXcjYQzuGg=,tag:Mv7F+0SRSuLx0zSbseUYDw==,type:str]
     INIT_POSTGRES_PASS: ENC[AES256_GCM,data:QZ7YsskBSXBj,iv:hsWS+9PdnRXp6mghRmUxohJFhCEGpft5OSDFFx+EyDI=,tag:A1Hps4o0UPTZVy+KWq0AtA==,type:str]
-    INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:HUIZ1uLwuzQr5dxjrIhDsjs9z7xJmLeRfps=,iv:fX7b2LWuRb8kj2Bpw6unGkTjAap2EzV8h8N6wfFrMn4=,tag:8p2xN6jNnq1ywIgpIGU0xQ==,type:str]
+    INIT_POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:XD1LRALg/QRA,iv:Nc7kCsu64tMRgP/Sha/UlSTCIzuspSx41gD6r35zxtA=,tag:gaq20g4SAn0Mr+FgLec8VQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -33,8 +33,8 @@ sops:
             UjhHQzdudFhJdWdiY2wzK1JUaDhtOHMKLySgepEnx67NXcZ7iU1BtFP9IlnWky6G
             S9TMdHvYhoZN6rJUvbllPJblagxooJEHGw+DbIQIPUmjtmLFA/ItBQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-28T17:52:09Z"
-    mac: ENC[AES256_GCM,data:8KqP2xh67dXwLLPyyJc2oDjopEAQroBN/Zh7lLKH+oiakbp3c1EwE3psorjjaJheuz1UX80V41Q9vgblmq3CN0ccUqyUuoT5snGE/hiCXZ0Ts2wRz33wh2mU9rJ9sd4K4e0fJsn3EwV59vf/wtX2U+COckPZkalzfwkaNAGQWy0=,iv:JiBhhf/MoX93qkwUK0n4zAW/8fmR3CiV7cJTr2zR+kk=,tag:UwzRchg28Lyvowx6WqLP8w==,type:str]
+    lastmodified: "2023-10-28T18:07:38Z"
+    mac: ENC[AES256_GCM,data:Ck+om//oMzPBwo7RXjrmzFfI0qNaTDBUV0YReMjevV/5monp1kv+L09gWptXA4vG3w5W+henB+MIjgacw5N6bE2CfLJSS4/+k77oxN1DPvpJqdtUBXwn+6CO9dleRbdMbTeIpdz7Jp4SVwNGDNJH3tb+IYq7Pv6javSOv+YOUg0=,iv:ys2t9Up06nkrzN8ZK2VnfVn9vmsWwQuIOkRiR2uI8VA=,tag:PvM6tPisBKkbbTj9hWODPQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
