--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -3,7 +3,7 @@ web:
   port: 80
 storage:
   type: postgres
-  path: postgres://${INIT_POSTGRES_USER}:${INIT_POSTGRES_PASS}@cloudnative-pg-cluster.database.svc.cluster.local:5432/${INIT_POSTGRES_DBNAME}?sslmode=disable
+  path: postgres://${SECRET_POSTGRES_USERNAME}:${SECRET_POSTGRES_PASSWORD}@cloudnative-pg-cluster.database.svc.cluster.local:5432/gatus?sslmode=disable
   caching: true
 metrics: true
 debug: false
