--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -7,7 +7,8 @@ stringData:
     SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:w4Jxkzfa1e98komYfGNldfHz/0e924HAlOTJlmg9WURdHAIoPrVtIg==,iv:qGuLmEAzV4pl7C8dLkJnjW0i5S9VCcarfg/1dgxutNE=,tag:gfEnAOpLLVj7ZZyuzPOFpA==,type:str]
     SECRET_PLACEHOLDER: ENC[AES256_GCM,data:RoYlM5dSQ3nUSZUW,iv:ejafphAV7suxETRpCgQG1b0qIkG1kjt6w4GYRzwm84g=,tag:QqvtF8I3Joa14BMZN8QA1A==,type:str]
     SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:owbbK13fBL/A,iv:/Tn+AaCyCktPJKQ6yVN9aHxKrOhP5IRkKYepyu1qlbQ=,tag:1slNXClJaajYSajI9eshNQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KiEir+88qA==,iv:gxXaKMsHxYuTE+wDgAv3hghZcERK7w7BV049FmaZwUY=,tag:VtvFS8ZOQlX+WFfpiJ9Uhw==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:lMnW4FOQDzk=,iv:KgbnKvjbqGh9mQJyXK5AQrqY5457kj8uiwtl353jazo=,tag:PbUuxjQtfPPA+yjqLU4llg==,type:str]
+    SECRET_POSTGRES_HOSTNANE: ENC[AES256_GCM,data:MfXKtYqIsGzhA9nDM4U3Gy3B9gKT8bz/cQaIYZQp0RPIDyc2iJvIz5x+W9DG13BkAw==,iv:/iXhi4chFXwgU6zPnMTlopLILcpLtd+0wgf4wQuPDaE=,tag:lL442D+nVe2Dv6fMMPZ5kg==,type:str]
     SECRET_AUTHELIA_JWT_TOKEN: ENC[AES256_GCM,data:EKcPAKN1FHIaQIIZKIJ4FWqv5XXHgns/gVLygRcqPngLkQe9Blo7Fk7lSZpkNeNiUdmZjQDFiVaeu7aDAL+/Jw==,iv:pogd9diBPu7FMITTARZy9ZYdOfvOsT6vfZ2f+KGTdZw=,tag:Ajsjx5kqEGuxiC1UY1WpYA==,type:str]
     SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NeBSaac87q4YdTCDvd6CeyOBXzLF,iv:W2E/K1EDePJeCtktZvXUY51WiUYwYmZRbQvoUYFlVq0=,tag:C40qakrbP+TQQkUyTaVMLQ==,type:str]
     SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:tPj+IqnzP8Kd,iv:0UVd1aVDwDiIkC1W7PivP4KxgoGvj2BRKiwikHyCFS4=,tag:0eUK6ukl12nPEeM6armT7A==,type:str]
@@ -30,8 +31,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-01T16:32:59Z"
-    mac: ENC[AES256_GCM,data:lPhrurh8g4v+gQWNjI5/0P8/+yFvxEYjDa0OoxFgQI1Ene9LX7GQMSp+FTVoRVDWcyFZNdJD5fyrPa9MdleOsVOuyqqT5iyNF79GON/p+J1RLIqh9cm1lsnwXNIqD3nI3lvTPTEDVXdy1v2qw/tlHf2iWL1BkWvA81O2lQYL+XE=,iv:6Yys0Eo3hUzsPPiCULk61HkSl+4pfUi7v5w+kbFcKiA=,tag:gJMWvZb44DmihwZ+YqCY3w==,type:str]
+    lastmodified: "2023-10-28T18:55:43Z"
+    mac: ENC[AES256_GCM,data:lneArgJ9UafN3v/KpUCVmZQByCJpXsvNUOhv7Rm7FxsXvbD2S7D8RXPJsBo1gXa3YYJx+YEyHfGOcDsPVgpXPEvXdxUrut9CXRmhOYcM7r4Skci7iJmvYJYeyMS5NacF0Gb/gaGA5TSXy1UEBZh+kXPVlzdY64GSIW5CPDoSKy0=,iv:9J+dro20KyKp4jmt6HYgWd+nQgLdcyXARHfktgd/NzQ=,tag:jaZJCThToIYqH/M9j2RtOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.8.1
