--- a/kubernetes/apps/media/sonarr/app/gatus.yaml
+++ b/kubernetes/apps/media/sonarr/app/gatus.yaml
@@ -10,14 +10,10 @@ data:
   config.yaml: |
     endpoints:
       - name: sonarr
-        group: guarded
-        url: 1.1.1.1
+        group: internal
+        url: https://sonarr.${SECRET_DOMAIN}
         interval: 1m
-        ui:
-          hide-hostname: true
-          hide-url: true
-        dns:
-          query-name: sonarr.${SECRET_DOMAIN}
-          query-type: A
+        client:
+          dns-resolver: tcp://192.168.2.1:53
         conditions:
-          - "len([BODY]) == 0"
+          - "[STATUS] == 200"
