--- a/kubernetes/apps/media/sabnzbd/app/gatus.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/gatus.yaml
@@ -2,18 +2,19 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: hajimari-gatus-ep
-  namespace: default
+  name: sabnzbd-gatus-ep
+  namespace: media
   labels:
     gatus.io/enabled: "true"
 data:
   config.yaml: |
     endpoints:
-      - name: hajimari
+      - name: sabnzbd
         group: internal
-        url: https://hajimari.${SECRET_DOMAIN}
+        url: https://sabnzbd.${SECRET_DOMAIN}
         interval: 1m
         client:
           dns-resolver: tcp://192.168.2.1:53
         conditions:
           - "[STATUS] == 200"
+
