--- a/kubernetes/apps/monitoring/gatus/app/config/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/config/config.yaml
@@ -34,7 +34,7 @@ endpoints:
       - "[STATUS] == 200"
   - name: postgresql
     group: database
-    url: "tcp:cloudnative-pg-cluster.database.svc.cluster.local:5432"
+    url: "tcp://cloudnative-pg-cluster.database.svc.cluster.local:5432"
     interval: 1m
     conditions:
       - "[STATUS] == 200"
